# everpilot

./: .gitignore  CHANGELOG.md  LICENSE  README.md
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  docker-entrypoint.sh  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 0001_create_repo_configs.py  0002_core_data_model.py  0003_webhook_deliveries.py  0004_audit_feed_indexes.py
backend/src/everpilot/: __init__.py  config.py  main.py
backend/src/everpilot/api/: __init__.py  audit.py  deps.py  health.py  repos.py  tasks.py  webhooks.py
backend/src/everpilot/capabilities/dependencies/: __init__.py  batching.py  detector.py  lockfiles.py  osv.py  registries.py  service.py  (+1 more)
backend/src/everpilot/db/: __init__.py  audit_recorder.py  deliveries.py  installations.py  postgres.py  store.py  tasks.py
backend/src/everpilot/github/: __init__.py  auth.py  installations.py  rollback.py
backend/src/everpilot/models/: __init__.py  capability.py  core.py  repo.py
backend/src/everpilot/orchestration/: __init__.py  dbos_engine.py  dispatcher.py  handlers.py
backend/src/everpilot/pipeline/: __init__.py  gates.py  pipeline.py
backend/tests/: conftest.py  fakes.py  test_audit_queries.py  test_batching.py  test_config.py  test_core_models.py  test_delivery_stores.py  test_dependencies.py  test_dependency_triggers.py  test_github_auth.py  test_health.py  test_installations.py  test_lifespan.py  test_orchestration.py  test_pipeline.py  test_repos.py  test_rollback.py  test_stores.py  test_task_api.py  test_task_stores.py  test_webhooks.py
(+30 files in other folders)
