[project]
name = "everpilot"
version = "0.1.0"
description = "Autonomous code-maintenance system for GitHub repositories"
authors = [
    { name = "Erik Peterson", email = "erik@cloudzero.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.139.0",
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pygithub>=2.9.1",
    "python-dotenv>=1.2.2",
    "uvicorn[standard]>=0.49.0",
]

[build-system]
requires = ["uv_build>=0.11.26,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.20",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=everpilot --cov-report=term-missing --cov-fail-under=80"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "RUF"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["everpilot"]

[tool.ruff.format]
quote-style = "double"
